CUR 4150 - Issue 07: The submission summary shows 2 equal lines at the bottom. It should have one longer or remove one line.

--- a/styles/branchingScenario.css
+++ b/styles/branchingScenario.css
@@ -147,3 +147,7 @@
 .h5p-branching-scenario .h5p-library-wrapper.h5p-next:not(.h5p-slide-in) {
   display: none;
 }
+
+.h5p-summary-table-pages {
+  border-bottom: none !important;
+}
